# Human-Aware-Navigation-for-Humanoid-Robot

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/human_aware_navigation/human_aware_nav_launch/launch/: move_base.launch  navigation.launch
src/lattice_planner/config/: nao_global_planner_params.yaml
src/nao_han/: CMakeLists.txt  package.xml
src/nao_han/config/: gazebo_ros_control_params.yaml  rviz_config.rviz
src/nao_han/launch/: move_base.launch  nao_driver_only.launch  nao_navigation.launch  new_nao_walker.launch
src/nao_han/launch/no_use/: NAO_V50.launch  nao_sim_world.launch  real_nao.launch  rviz.launch  test_nao.launch  tt_navigation.launch  tt_sim_world.launch
src/nao_han/maps/: map.pgm  nao_empty.pgm  nao_empty.yaml
src/nao_han/nodes/: fake_laser.py  new_nao_walker.py  test_remap.py
src/nao_han/param/: global_costmap_params.yaml  local_costmap_params.yaml
src/nao_han/src/: base_footprint_NAO_HAN.cpp
src/nao_han/worlds/: myworld.world  nao_empty.world
src/nao_robot/nao_apps/launch/: walker.launch
src/nao_robot/nao_apps/nodes/: nao_walker.py  nao_walker_f1.py
src/nao_virtual/nao_gazebo_plugin/config/: gazebo_ros_control_params.yaml
src/nao_virtual/nao_gazebo_plugin/launch/: nao_gazebo.launch
src/people/people_msgs/: CMakeLists.txt
src/timed_path_follower/config/: local_planner_params.yaml
